# inspect4py

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile_old  LICENSE  MANIFEST.in  README.md  code_inspector.py  code_visualization.py  codemeta.json  evaluate_directory_type.py  mkdocs.yml  parse_setup_files.py  pyproject.toml  requirements.txt  requirements_eval.txt  run_directory_type_evaluation.py  setup.py  structure_tree.py  test_directory_type.py  utils.py
test/test_files/Chowlk/: README.md  app.py  config.py  converter.py  requirements.txt  setup.cfg
test/test_files/Chowlk/data/: aio.xml  building.xml  building_failing.xml  cogito-onto.xml  discovery.xml  example.xml  example2.xml  final_ontology_cesar.xml  forecasting1.xml  jhon.xml  jon.xml  occupancy_profile.xml  prueba.xml  prueba_fallo.xml  renovation_processes.xml  saref4building.xml  test-data.xml  test.data.drawio  wot-discovery-chowlk.xml
test/test_files/Chowlk/output/: occupancy_profile.owl
test/test_files/Chowlk/source/chowlk/: associations.py  finding.py  geometry.py  transformations.py  utils.py  writer.py
test/test_files/Chowlk/static/css/: poster.css  style.css
test/test_files/Chowlk/static/js/: sketch.js
test/test_files/Chowlk/templates/: chowlk_poster.html  home.html  output.html
test/test_files/Chowlk/tests/: test_finding.py
test/test_files/Chowlk/tests/inputs/: test_attributes_1.xml  test_attributes_10.xml  test_attributes_11.xml  test_attributes_12.xml  test_attributes_13.xml  test_attributes_2.xml  test_attributes_3.xml  test_attributes_4.xml  test_disjoint_1.xml  (+40 more)
(+162 files in other folders)
