[metadata]
name = chowlk-pkg-SergeCF3006
version = 1.0.0
author = Serge Chávez-Feria
author_email = chavezferia.justinian@gmail.com
description = A converter to transform an xml ontology conceptualization into its OWL implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oeg-upm/Chowlk
project_urls =
    Chowlk Visual Notation = https://chowlk.linkeddata.es/chowlk_spec

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = source

install_requires = 
    beautifulsoup4 >= 4.9.1
    rdflib >= 5.0.0

packages = find:
python_requires = >=3.7

[options.packages.find]
where = source

